feat(profile): implement secure user account details patch updating via jwt token
