# api/src/main/java/com/gemstoneseekers/controllers/UserProfileController.java
@@ -1,17 +1,17 @@
 package com.gemstoneseekers.controllers;
 
+import com.gemstoneseekers.dtos.request.UserRequest;
 import com.gemstoneseekers.dtos.response.BaseResponse;
 import com.gemstoneseekers.dtos.response.CandidateProfileResponse;
+import com.gemstoneseekers.dtos.response.UserResponse;
 import com.gemstoneseekers.services.UserProfileService;
+import com.gemstoneseekers.services.UserService;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.security.core.annotation.AuthenticationPrincipal;
 import org.springframework.security.core.userdetails.UserDetails;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.PathVariable;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.bind.annotation.*;
 
 import java.util.UUID;
 
@@ -19,9 +19,11 @@ import java.util.UUID;
 @RequestMapping("/api/v1/profile")
 public class UserProfileController {
 
+    private final UserService userService;
     UserProfileService userProfileService;
-    public UserProfileController(UserProfileService userProfileService) {
+    public UserProfileController(UserProfileService userProfileService, UserService userService) {
         this.userProfileService = userProfileService;
+        this.userService = userService;
     }
 
     @GetMapping("/{userId}")
@@ -31,6 +33,19 @@ public class UserProfileController {
 
         return ResponseEntity.status(HttpStatus.OK)
             .body( new BaseResponse<>(true,"Candidate profile retrieved successfully", candidateProfile,null ));
+    }
+
+    @PatchMapping("/user")
+    @PreAuthorize("hasRole('CANDIDATE')")
+    public ResponseEntity<BaseResponse<UserResponse>> updateCandidateProfile(
+        @AuthenticationPrincipal UserDetails userDetails,
+        @RequestBody UserRequest request)
+    {
+        String email = userDetails.getUsername();
+        UserResponse updatedUser = userService.updateUserByEmail(email,request);
+
+        return ResponseEntity.status(HttpStatus.OK)
+            .body( new BaseResponse<>(true,"User info updated successfully", updatedUser,null));
     }
 
 
