# api/src/main/java/com/gemstoneseekers/dtos/request/UserRequest.java
@@ -1,0 +1,9 @@
+package com.gemstoneseekers.dtos.request;
+
+
+public record UserRequest(
+    String name,
+    String password,
+    String documentType,
+    String documentNumber
+) {}
