# api/src/main/resources/static/openapi.yml
@@ -336,6 +336,24 @@ paths:
             '*/*':
               schema:
                 $ref: "#/components/schemas/BaseResponseLoginResponse"
+  /api/v1/profile/user:
+    patch:
+      tags:
+      - user-profile-controller
+      operationId: updateCandidateProfile
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/UserRequest"
+        required: true
+      responses:
+        "200":
+          description: OK
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/BaseResponseUserResponse"
   /api/v1/auth/complete-registration:
     patch:
       tags:
@@ -416,6 +434,25 @@ paths:
             '*/*':
               schema:
                 $ref: "#/components/schemas/BaseResponseRecruiterResponse"
+  /api/v1/profile/{userId}:
+    get:
+      tags:
+      - user-profile-controller
+      operationId: getCandidateProfile
+      parameters:
+      - name: userId
+        in: path
+        required: true
+        schema:
+          type: string
+          format: uuid
+      responses:
+        "200":
+          description: OK
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/BaseResponseCandidateProfileResponse"
   /api/v1/market-radar/technology-demand:
     get:
       tags:
@@ -775,6 +812,47 @@ components:
       required:
       - email
       - password
+    UserRequest:
+      type: object
+      properties:
+        name:
+          type: string
+        password:
+          type: string
+        documentType:
+          type: string
+        documentNumber:
+          type: string
+    BaseResponseUserResponse:
+      type: object
+      properties:
+        success:
+          type: boolean
+        message:
+          type: string
+        result:
+          $ref: "#/components/schemas/UserResponse"
+        error:
+          $ref: "#/components/schemas/ErrorResponse"
+    UserResponse:
+      type: object
+      properties:
+        id:
+          type: string
+          format: uuid
+        name:
+          type: string
+        email:
+          type: string
+        role:
+          type: string
+          enum:
+          - CANDIDATE
+          - RECRUITER
+        documentType:
+          type: string
+        documentNumber:
+          type: string
     CompleteRegistrationRequest:
       type: object
       properties:
@@ -899,6 +977,188 @@ components:
         stateId:
           type: integer
           format: int32
+    AddressResponse:
+      type: object
+      properties:
+        id:
+          type: string
+          format: uuid
+        city:
+          $ref: "#/components/schemas/CityResponse"
+        zipCode:
+          type: string
+        street:
+          type: string
+        number:
+          type: string
+        neighborhood:
+          type: string
+        complement:
+          type: string
+    BaseResponseCandidateProfileResponse:
+      type: object
+      properties:
+        success:
+          type: boolean
+        message:
+          type: string
+        result:
+          $ref: "#/components/schemas/CandidateProfileResponse"
+        error:
+          $ref: "#/components/schemas/ErrorResponse"
+    CandidateLanguageResponse:
+      type: object
+      properties:
+        languageId:
+          type: integer
+          format: int32
+        languageName:
+          type: string
+        proficiency:
+          type: string
+          enum:
+          - BASIC
+          - INTERMEDIATE
+          - ADVANCED
+          - FLUENT
+          - NATIVE
+    CandidateLinkResponse:
+      type: object
+      properties:
+        id:
+          type: string
+          format: uuid
+        name:
+          type: string
+        url:
+          type: string
+    CandidateProfileResponse:
+      type: object
+      properties:
+        candidate:
+          $ref: "#/components/schemas/CandidateResponse"
+        address:
+          $ref: "#/components/schemas/AddressResponse"
+    CandidateResponse:
+      type: object
+      properties:
+        id:
+          type: string
+          format: uuid
+        user:
+          $ref: "#/components/schemas/UserResponse"
+        phone:
+          type: string
+        summary:
+          type: string
+        links:
+          type: array
+          items:
+            $ref: "#/components/schemas/CandidateLinkResponse"
+        experiences:
+          type: array
+          items:
+            $ref: "#/components/schemas/ExperienceResponse"
+        educations:
+          type: array
+          items:
+            $ref: "#/components/schemas/EducationResponse"
+        certifications:
+          type: array
+          items:
+            $ref: "#/components/schemas/CertificationResponse"
+        projects:
+          type: array
+          items:
+            $ref: "#/components/schemas/ProjectResponse"
+        languages:
+          type: array
+          items:
+            $ref: "#/components/schemas/CandidateLanguageResponse"
+    CertificationResponse:
+      type: object
+      properties:
+        id:
+          type: string
+          format: uuid
+        name:
+          type: string
+        issuingOrganization:
+          type: string
+        issueDate:
+          type: string
+          format: date
+        expirationDate:
+          type: string
+          format: date
+        credentialUrl:
+          type: string
+    EducationResponse:
+      type: object
+      properties:
+        id:
+          type: string
+          format: uuid
+        institution:
+          type: string
+        fieldOfStudy:
+          type: string
+        degree:
+          type: string
+        startDate:
+          type: string
+          format: date
+        completionDate:
+          type: string
+          format: date
+        technologies:
+          type: array
+          items:
+            $ref: "#/components/schemas/TechnologyResponse"
+          uniqueItems: true
+    ExperienceResponse:
+      type: object
+      properties:
+        id:
+          type: string
+          format: uuid
+        title:
+          type: string
+        companyName:
+          type: string
+        startDate:
+          type: string
+          format: date
+        endDate:
+          type: string
+          format: date
+        isCurrent:
+          type: boolean
+        description:
+          type: string
+    ProjectResponse:
+      type: object
+      properties:
+        id:
+          type: string
+          format: uuid
+        name:
+          type: string
+        description:
+          type: string
+        projectUrl:
+          type: string
+        startDate:
+          type: string
+          format: date
+        endDate:
+          type: string
+          format: date
+        technologies:
+          type: array
+          items:
+            $ref: "#/components/schemas/TechnologyResponse"
+          uniqueItems: true
     BaseResponseListTechnologyDemandResponse:
       type: object
       properties:
